Add language dynamically

--- a/views/create.html
+++ b/views/create.html
@@ -150,70 +150,11 @@
           <div class="row mt-4">
             <nav class="col-md-3 mb-3 text-center">
               <div class="nav flex-column nav-pills border rounded" id="nav-tab" role="tablist">
-                <a class="nav-item nav-link active" id="english-tab" data-toggle="tab" href="#english" role="tab" aria-controls="english" aria-selected="true">English 🇬🇧</a>
-                <a class="nav-item nav-link" id="chinese-tab" data-toggle="tab" href="#chinese" role="tab" aria-controls="chinese" aria-selected="false">Chinese 🇨🇳</a>
-                <a class="nav-item nav-link" id="spanish-tab" data-toggle="tab" href="#spanish" role="tab" aria-controls="spanish" aria-selected="false">Spanish 🇪🇸</a>
-                <a class="nav-item nav-link" id="japanese-tab" data-toggle="tab" href="#japanese" role="tab" aria-controls="japanese" aria-selected="false">Japanese 🇯🇵</a>
-                <a class="nav-item nav-link" id="arabic-tab" data-toggle="tab" href="#arabic" role="tab" aria-controls="arabic" aria-selected="false">Arabic 🇸🇦</a>
+                <!-- It will be generated from javascript -->
               </div>
             </nav>
-            <div class="col tab-content">
-              <!-- English -->
-              <div class="tab-pane fade show active" id="english" role="tabpanel" aria-labelledby="english-tab">
-                <div class="form-group">
-                  <label for="abstract">Project Abstract <small>(Markdown Format Supported)</small></label>
-                  <textarea class="form-control" id="abstract" name="abstract" rows="4" required></textarea>
-                </div>
-                <div class="form-group">
-                  <label for="proposal">Project Proposal <small>(Markdown Format Supported)</small></label>
-                  <textarea class="form-control" id="proposal" name="proposal" rows="4"></textarea>
-                </div>
-              </div>
-              <!-- Chinese -->
-              <div class="tab-pane fade" id="chinese" role="tabpanel" aria-labelledby="chinese-tab">
-                <div class="form-group">
-                  <label for="abstractZH">Project Abstract <small>(Markdown Format Supported)</small></label>
-                  <textarea class="form-control" id="abstractZH" name="abstractZH" rows="4"></textarea>
-                </div>
-                <div class="form-group">
-                  <label for="proposalZH">Project Proposal <small>(Markdown Format Supported)</small></label>
-                  <textarea class="form-control" id="proposalZH" name="proposalZH" rows="4"></textarea>
-                </div>
-              </div>
-              <!-- Spanish -->
-              <div class="tab-pane fade" id="spanish" role="tabpanel" aria-labelledby="spanish-tab">
-                <div class="form-group">
-                  <label for="abstractES">Project Abstract <small>(Markdown Format Supported)</small></label>
-                  <textarea class="form-control" id="abstractES" name="abstractES" rows="4"></textarea>
-                </div>
-                <div class="form-group">
-                  <label for="proposalES">Project Proposal <small>(Markdown Format Supported)</small></label>
-                  <textarea class="form-control" id="proposalES" name="proposalES" rows="4"></textarea>
-                </div>
-              </div>
-              <!-- Japanese -->
-              <div class="tab-pane fade" id="japanese" role="tabpanel" aria-labelledby="japanese-tab">
-                <div class="form-group">
-                  <label for="abstractJA">Project Abstract <small>(Markdown Format Supported)</small></label>
-                  <textarea class="form-control" id="abstractJA" name="abstractJA" rows="4"></textarea>
-                </div>
-                <div class="form-group">
-                  <label for="proposalJA">Project Proposal <small>(Markdown Format Supported)</small></label>
-                  <textarea class="form-control" id="proposalJA" name="proposalJA" rows="4"></textarea>
-                </div>
-              </div>
-              <!-- Arabic -->
-              <div class="tab-pane fade" id="arabic" role="tabpanel" aria-labelledby="arabic-tab">
-                <div class="form-group">
-                  <label for="abstractAR">Project Abstract <small>(Markdown Format Supported)</small></label>
-                  <textarea class="form-control" id="abstractAR" name="abstractAR" rows="4"></textarea>
-                </div>
-                <div class="form-group">
-                  <label for="proposalAR">Project Proposal <small>(Markdown Format Supported)</small></label>
-                  <textarea class="form-control" id="proposalAR" name="proposalAR" rows="4"></textarea>
-                </div>
-              </div>
-              <!-- / -->
+            <div class="col tab-content" id="nav-item">
+              <!-- It will be generated from javascript -->
             </div>
           </div>
           <hr>
