--- a/views/index.html
+++ b/views/index.html
@@ -480,47 +480,8 @@ style="display: flex; justify-content: center; text-align: left;"
   <a class="btn-floating btn-large green"
   ><i class="large icon-translate"></i
     ></a>
-    <ul style="float: right; text-align: right; margin-right: 0.5rem;">
-      <li>
-        <a
-        class="btn-floating purple darken-2"
-        style="text-align: center;"
-        id="translateEnglish"
-        >En</a
-        >
-      </li>
-      <li>
-        <a
-        class="btn-floating pink darken-2"
-        style="text-align: center;"
-        id="translateChinese"
-        >Cn</a
-        >
-      </li>
-      <li>
-        <a
-        class="btn-floating red darken-1"
-        style="text-align: center;"
-        id="translateJapanese"
-        >Ja</a
-        >
-      </li>
-      <li>
-        <a
-        class="btn-floating orange darken-2"
-        style="text-align: center;"
-        id="translateSpanish"
-        >Es</a
-        >
-      </li>
-      <li>
-        <a
-        class="btn-floating orange darken-2"
-        style="text-align: center;"
-        id="translateArabic"
-        >ar</a
-        >
-      </li>
+    <ul id="languageList" style="float: right; text-align: right; margin-right: 0.5rem;">
+       <!-- It will be generated from javascript -->
     </ul>
   </div>
 
