--- a/views/create.html
+++ b/views/create.html
@@ -58,7 +58,7 @@
             </div>
             <div class="form-group col-4">
               <label for="start_day">Day</label>
-              <input type="number"  data-range="start" class="form-control date-input" id="start_day" name="start_day" required>
+              <input type="number"  data-range="start" class="form-control date-input check_day" id="start_day" name="start_day" required>
             </div>
           </div>
           <!-- /Start Date -->
@@ -89,7 +89,7 @@
             </div>
             <div class="form-group col-4">
               <label for="end_day">Day</label>
-              <input type="number" data-range="end" class="form-control date-input" id="end_day" name="end_day" required>
+              <input type="number" data-range="end" class="form-control date-input check_day" id="end_day" name="end_day" required>
             </div>
           </div>
           <!-- /End Date -->
