send how-to link to site instead of old article

--- a/views/index.html
+++ b/views/index.html
@@ -447,7 +447,7 @@ style="display: flex; justify-content: center; text-align: left;"
   <a
   class="valign-wrapper"
   target="_blank"
-  href="https://read.cash/@flipstarter/how-to-support-a-flipstarter-campaign-f27240d9"
+  href="https://flipstarter.cash/how-to-pledge"
   >
   <i class="icon-info"></i>
   &nbsp;
