solve : make social media pick up the summary or other campaign content instead of generic flipstarter text

--- a/views/index.html
+++ b/views/index.html
@@ -56,12 +56,19 @@
   <link href="/static/css/style.css" rel="stylesheet">
 
   <!-- Website metadata -->
-  <title>Flipstarter</title>
-  <meta property="og:title" content="Flipstarter">
+  <title> <!-- campaign.title --> </title>
+  <meta property="og:title" content="<!-- campaign.title -->">
   <meta
   property="og:description"
-  content="Fundraiser for Bitcoin Cash infrastructure utilizing assurance contracts to ensure fairness."
+  content="<!-- campaign.description -->"
   >
+
+  <!-- twitter card -->
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@site_twitter_handle">
+  <meta name="twitter:title" content="<!-- campaign.title -->">
+  <meta name="twitter:description" content="<!-- campaign.description -->">
+
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.flipstarter.cash/">
   <meta
