--- a/views/create.html
+++ b/views/create.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  
   <!-- Custom CSS -->
   <link rel="stylesheet" href="/static/css/create.css">
 
@@ -16,7 +16,7 @@
 
 <body class="clouds">
 
-  <section class="container my-5">
+  <section class="container my-5" id="app">
     <div class="row justify-content-center">
       <div class="col col-lg-10 card card-body shadow-sm">
         <div class="text-center">
@@ -24,122 +24,115 @@
           <h1 class="my-3">Create a campaign</h1>
         </div>
         <!-- Form -->
-        <form method="POST" action="" id="form">
+        <form method="POST" action="" id="form" ref="form">
           <!-- Title -->
           <div class="form-group">
             <label for="title" class="h4">Campaign Title</label>
-            <input type="text" class="form-control" id="title" name="title" required>
+            <input type="text" v-validate="validate.require" v-model="campaign.title" class="form-control" id="title" name="title">
           </div>
           <!-- /Title -->
           <hr>
           <!-- Start Date -->
-          <p class="h4">Start Date <small>(UTC±00:00)</small></p>
-          <div class="form-row">
-            <div class="form-group col-4">
-              <label for="start_year">Year</label>
-              <input type="number" class="form-control date-input check_year" id="start_year" name="start_year" required>
-            </div>
-            <div class="form-group col-4">
-              <label for="start_month">Month</label>
-              <select class="form-control" id="start_month" name="start_month">
-                <option value="01">1 - January</option>
-                <option value="02">2 - February</option>
-                <option value="03">3 - March</option>
-                <option value="04">4 - April</option>
-                <option value="05">5 - May</option>
-                <option value="06">6 - June</option>
-                <option value="07">7 - July</option>
-                <option value="08">8 - August</option>
-                <option value="09">9 - September</option>
-                <option value="10">10 - October</option>
-                <option value="11">11 - November</option>
-                <option value="12">12 - December</option>
-              </select>
-            </div>
-            <div class="form-group col-4">
-              <label for="start_day">Day</label>
-              <input type="number"  data-range="start" class="form-control date-input check_day" id="start_day" name="start_day" required>
-            </div>
-          </div>
-          <!-- /Start Date -->
-          <hr>
-          <!-- End Date -->
-          <p class="h4">End Date <small>(UTC±00:00)</small></p>
-          <div class="form-row">
-            <div class="form-group col-4">
-              <label for="end_year">Year</label>
-              <input type="number" class="form-control date-input check_year" id="end_year" name="end_year" required>
-            </div>
-            <div class="form-group col-4">
-              <label for="end_month">Month</label>
-              <select class="form-control" id="end_month" name="end_month" required>
-                <option value="01">1 - January</option>
-                <option value="02">2 - February</option>
-                <option value="03">3 - March</option>
-                <option value="04">4 - April</option>
-                <option value="05">5 - May</option>
-                <option value="06">6 - June</option>
-                <option value="07">7 - July</option>
-                <option value="08">8 - August</option>
-                <option value="09">9 - September</option>
-                <option value="10">10 - October</option>
-                <option value="11">11 - November</option>
-                <option value="12">12 - December</option>
-              </select>
-            </div>
-            <div class="form-group col-4">
-              <label for="end_day">Day</label>
-              <input type="number" data-range="end" class="form-control date-input check_day" id="end_day" name="end_day" required>
-            </div>
+          <div class="row py-2">
+              <div class="form-group col-lg-6">
+                <p class="h4 py-2">Start Date <small>(UTC±00:00)</small></p>
+                <input v-validate="validate.require" v-model="campaign.date.start" class="form-control" type="date" name="start_date" data-vv-name="start date" @change="$validator.validate('end date')"  ref="start-date">
+              </div>
+              <div class="form-group col-lg-6">
+                <p class="h4 py-2">End Date <small>(UTC±00:00)</small></p>
+                <input v-validate="validate.rangeDate" v-model="campaign.date.end" class="form-control" type="date" name="end_date" data-vv-name="end date">
+              </div>
           </div>
           <!-- /End Date -->
           <!-- Recipients -->
-          <div id="recipients">
-            <p class="h4">Recipients</p>
-            <p>Recipient 1</p>
-            <div class="form-row text-muted">
+          <p class="h4 py-2">Recipients</p>
+          <div id="recipients" v-for="(recipient , index) in campaign.recipients">
+            <div class="align-items-center d-flex justify-content-between">
+              <p>Recipient {{ index + 1 }}</p> 
+              <div v-if="index !== 0" @click="campaign.recipients.splice(index, 1);" class="remove btn btn-link text-danger d-inline float-right">Remove</div>
+            </div>
+            <div class="row text-muted">
               <div class="form-group col-lg-4">
-                <label for="amount[0]">Funding Goal <small>(amount in BCH)</small></label>
-                <input type="number" class="form-control goal-input" id="amount[0]" name="amount[0]" step="0.00000001" required>
+                <label :for="`amount[${index}]`">Funding Goal <small>(amount in BCH)</small></label>
+                <input 
+                  v-validate="validate.goal" 
+                  v-model="recipient.goal" 
+                  :data-vv-name="`recipient ${ index + 1 } funding goal`" 
+                  type="number" 
+                  class="form-control goal-input" 
+                  :id="`amount[${index}]`" 
+                  :name="`amount[${index}]`"
+                >
               </div>
               <div class="form-group col-lg-4">
-                <label for="image_url[0]">Image URL</label>
-                <input type="text" class="form-control check-url" id="image_url[0]" name="image_url[0]" required>
+                <label :for="`image_url[${index}]`">Image URL</label>
+                <input 
+                  v-validate="validate.url" 
+                  v-model="recipient.image_url" 
+                  :data-vv-name="`recipient ${ index + 1 } image URL`" 
+                  type="text" 
+                  class="form-control check-url" 
+                  :id="`image_url[${index}]`" 
+                  :name="`image_url[${index}]`"
+                >
               </div>
               <div class="form-group col-lg-4">
-                <label for="recipient_name[0]">Recipient Name</label>
-                <input type="text" class="form-control" id="recipient_name[0]" name="recipient_name[0]" required>
+                <label :for="`recipient_name[${index}]`">Recipient Name</label>
+                <input 
+                  v-validate="validate.require" 
+                  v-model="recipient.name" 
+                  :data-vv-name="`recipient ${ index + 1 } name`" 
+                  type="text" 
+                  class="form-control"
+                  :id="`recipient_name[${index}]`" 
+                  :name="`recipient_name[${index}]`"
+                >
               </div>
             </div>
-            <div class="form-row text-muted">
-              <div class="form-group col-md-6">
-                <label for="bch_address[0]">Bitcoin Cash Address <small>(include bitcoincash: prefix)</small></label>
-                <input type="text" class="form-control check-bch-address" id="bch_address[0]" name="bch_address[0]" required>
+            <div class="row text-muted">
+              <div class="form-group col-lg-6">
+                <label :for="`bch_address[${index}]`">Bitcoin Cash Address <small>(include bitcoincash: prefix)</small></label>
+                <input 
+                  v-validate="validate.cashAddress" 
+                  v-model="recipient.address" 
+                  :data-vv-name="`recipient ${ index + 1 } bitcoin cash address`" 
+                  type="text" 
+                  class="form-control check-bch-address" 
+                  :id="`bch_address[${index}]`" 
+                  :name="`bch_address[${index}]`"
+                >
               </div>
-              <div class="form-group col-md-6">
-                <label for="project_url[0]">Recipient Website</label>
-                <input type="text" class="form-control check-url" id="project_url[0]" name="project_url[0]" required>
+              <div class="form-group col-lg-6">
+                <label :for="`project_url[${index}]`">Recipient Website</label>
+                <input
+                  v-validate="validate.url" 
+                  v-model="recipient.website" 
+                  :data-vv-name="`recipient ${ index + 1 } website address`" 
+                  type="text" 
+                  class="form-control check-url" 
+                  :id="`project_url[${index}]`" 
+                  :name="`project_url[${index}]`"
+                >
               </div>
             </div>
           </div>
-          <button class="btn btn-link js-add-recipient" onclick="addRecipient()" type="button">Add a recipient</button>
+          <button type="button" class="btn btn-primary js-add-recipient mt-3" @click="addRecipient()" :disabled="campaign.recipients.length === 7">Add a recipient</button>
           <!-- /Recipients -->
           <hr>
           <!-- Markdown files -->
           <p class="h4">Description</p>
           <p>Provide your potential investors with in-depth information about your project.
-            <a class="text-nowrap" data-toggle="modal" data-target="#modal-abstract-demo" href="#">
+            <a class="text-nowrap" href="#" @click="modal = true">
               <u>Learn more</u>
             </a>
           </p>
-          <div class="modal modal-abstract-demo fade" id="modal-abstract-demo" tabindex="-1" role="dialog">
-            <div class="modal-dialog modal-lg" role="document">
+          <!-- learn more popup -->
+          <div :class="'modal fade bg-secondary bg-opacity-75 ' + (modal ? 'show' : '')">
+            <div class="modal-dialog modal-lg">
               <div class="modal-content">
                 <div class="modal-header">
                   <div class="h5 mb-0" class="modal-title">Project Abstract + Proposal</div>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
+                  <button type="button" class="btn-close" aria-label="Close" @click="modal = false"></button>
                 </div>
                 <div class="modal-body p-0">
                   <img class="img-fluid" src="/static/img/abstract-proposal.png" width="920" height="800" alt="Project Abstract + Proposal placement example">
@@ -147,34 +140,69 @@
               </div>
             </div>
           </div>
-          <div class="row mt-4">
+          <!-- /learn more popup -->
+          <!-- Description fields -->
+          <div class="row mt-4" ref="langList">
             <nav class="col-md-3 mb-3 text-center">
-              <div class="nav flex-column nav-pills border rounded" id="nav-tab" role="tablist">
-                <!-- It will be generated from javascript -->
+              <div class="nav flex-column nav-pills border rounded" id="nav-tab">
+                <span
+                  v-for="(language , lang , index) in languages"
+                  :class="'nav-item nav-link cursor-pointer ' + ((index === languageTap) ? 'active' : '')"
+                  :id="language.name + '-tab'"
+                  @click="activeLanguage(index)"
+                >
+                  {{language.name}} {{language.unicode}}
+              </span>
               </div>
             </nav>
             <div class="col tab-content" id="nav-item">
-              <!-- It will be generated from javascript -->
+              <div v-for="(language , lang , index) in languages" :id="language.name">
+                <transition name="slide-fade">
+                  <div v-show="languageTap === index">
+                    <div class="form-group">
+                      <label :for="'abstract' + lang">Project Abstract <small>(Markdown Format Supported)</small></label>
+                      <textarea v-if="lang !== 'EN'" class="form-control" :id="'abstract' + lang" :name="'abstract' + lang" rows="4"></textarea>
+                      <textarea v-else v-validate="validate.require" :data-vv-name="`English abstract`" class="form-control" :id="'abstract' + lang" :name="'abstract' + lang" rows="4"></textarea>
+                    </div>
+                    <div class="form-group">
+                      <label :for="'proposal' + lang">Project Proposal <small>(Markdown Format Supported)</small></label>
+                      <textarea class="form-control" :id="'proposal' + lang" :name="'proposal' + lang" rows="4"></textarea>
+                    </div>
+                  </div>
+                </transition>
+              </div>
             </div>
           </div>
+          <!-- /Description fields -->
+          <br>
+          <br>
           <hr>
           <p>Please check that everything is correct, you will not be able to edit your campaign later on.</p>
           <!-- Error message -->
-          <div class="alert alert-danger d-none" id="error">
-            <!-- It will be generated from javascript -->
+          <div class="alert alert-danger w-100 mx-auto" id="error" v-if="error && errors.items.length">
+            <p>Some fields are incorrect :</p>
+            <ul>
+              <li class="py-1" v-for="item in errors.items">
+                {{ item.msg }}
+              </li>
+            </ul>
           </div>
+          <!-- /Error message -->
           <!-- Submit button -->
-          <button class="btn btn-primary btn-lg btn-block" onclick="validateForm()" type="button">Create</button>
+          <button class="w-75 d-block m-auto btn btn-primary btn-lg btn-block" @click="validateForm()" type="button">Create</button>
         </form>
       </div>
     </div>
+    <div class="align-items-center bg-white d-flex end-0 h-100 justify-content-center loading position-fixed top-0 w-100" v-if="mounted">
+      <div class="spinner-grow" style="width: 3rem; height: 3rem;" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div>
   </section>
-
-  <!-- JS, Popper.js, and jQuery -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/bchaddrjs@0.4.9/dist/bchaddrjs-0.4.9.min.js" crossorigin="anonymous"></script>
+  <!-- JS, vue, vee-validate -->
+  <script src="https://unpkg.com/vee-validate@<3.0.0" integrity="sha384-7tFZHb5ob32ZwSaEC/CFJ1xYjmezMB2mJdGpNYo33iPRDAAuRLnDh1DRX0xs6hZt" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/vue@2.6.14/dist/vue.min.js" integrity="sha384-ULpZhk1pvhc/UK5ktA9kwb2guy9ovNSTyxPNHANnA35YjBQgdwI+AhLkixDvdlw4" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/bchaddrjs@0.4.9/dist/bchaddrjs-0.4.9.min.js" integrity="sha384-C/wey7b4Ij3srh947CFzL96lH77IJNCONg6vahijvotBrYMo+yb0rMNOTMrIaT5l" crossorigin="anonymous"></script>
   <script src="/static/js/create.js"></script>
 
 </body>
