--- a/views/index.html
+++ b/views/index.html
@@ -420,6 +420,17 @@
     style="margin-bottom: 2rem;"
     ></ul>
   </section>
+  
+  <section>
+    <h3 style="float: left;">
+      <span class="valign-wrapper" style="float: left;">
+        <i class="icon-code"></i>
+        <span data-string="trackDelivery"></span>
+      </span>
+    </h3>
+    <hr>
+    <a style="display: block;margin-bottom: 2em;font-size: 1.4em;" id="track-delivery"></a>
+  </section>
 
   <section>
     <h3 style="float: left;">
