--- a/views/create.html
+++ b/views/create.html
@@ -185,6 +185,9 @@
           </div>
           <!-- /learn more popup -->
           <!-- Description fields -->
+          <div class="alert alert-warning" role="alert">
+            when you write Project Proposal for any language, the Abstract of this language will be require
+          </div>
           <div class="row mt-4" ref="langList">
             <nav class="col-md-3 mb-3 text-center">
               <div class="nav flex-column nav-pills border rounded" id="nav-tab">
@@ -204,16 +207,38 @@
                   <div v-show="languageTap === index">
                     <div class="form-group">
                       <label :for="'abstract' + lang">Project Abstract <small>(Markdown Format Supported)</small></label>
-                      <textarea v-if="lang !== 'EN'" class="form-control" :id="'abstract' + lang" :name="'abstract' + lang" rows="4"></textarea>
-                      <textarea v-else v-validate="validate.require" :data-vv-name="`English abstract`" class="form-control" :id="'abstract' + lang" :name="'abstract' + lang" rows="4"></textarea>
+                      <textarea 
+                        v-validate="{required : !!(campaign.default_language == lang || language.proposal)}" 
+                        :data-vv-name="`${language.name} abstract`" 
+                        class="form-control" 
+                        :id="'abstract' + lang" 
+                        :name="'abstract' + lang" 
+                        rows="4"
+                        v-model="language.abstract"
+                      ></textarea>
                     </div>
                     <div class="form-group">
                       <label :for="'proposal' + lang">Project Proposal <small>(Markdown Format Supported)</small></label>
-                      <textarea class="form-control" :id="'proposal' + lang" :name="'proposal' + lang" rows="4"></textarea>
+                      <textarea 
+                        class="form-control" 
+                        :id="'proposal' + lang" 
+                        :name="'proposal' + lang" 
+                        rows="4"
+                        v-model="language.proposal"
+                      ></textarea>
                     </div>
+                    <input
+                      type="checkbox"
+                      :id="'default_language-' + lang"
+                      @input="changeMainLanguage($event , lang)" 
+                      :checked="campaign.default_language == lang"
+                    >
+                    <label :for="'default_language-' + lang">default language</label>
                   </div>
                 </transition>
               </div>
+              <!-- Set default language in input to push it to server -->
+              <input type="text" name="default_language" :value="campaign.default_language" hidden>
             </div>
           </div>
           <!-- /Description fields -->
