Improve clarity of language in campaign creation.

--- a/views/create.html
+++ b/views/create.html
@@ -164,7 +164,7 @@
           <hr>
           <!-- Markdown files -->
           <p class="h4">Description</p>
-          <p>Provide your potential investors with in-depth information about your project.
+          <p>Provide your potential supporters with in-depth information about your project.
             <a class="text-nowrap" href="#" @click="modal = true">
               <u>Learn more</u>
             </a>
@@ -186,7 +186,7 @@
           <!-- /learn more popup -->
           <!-- Description fields -->
           <div class="alert alert-warning" role="alert">
-            when you write Project Proposal for any language, the Abstract of this language will be require
+            Each supported language requires at least a Project Abstract.
           </div>
           <div class="row mt-4" ref="langList">
             <nav class="col-md-3 mb-3 text-center">
