markdown editor in campaign creation and Improve quality of markdown parsing

--- a/views/index.html
+++ b/views/index.html
@@ -54,6 +54,7 @@
   <link rel="icon" href="/static/img/logo.png">
   <link href="/static/css/materialize.min.css" rel="stylesheet">
   <link href="/static/css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/github-markdown-css@5.1.0/github-markdown-light.css">
 
   <!-- Website metadata -->
   <title> <!-- campaign.title --> </title>
@@ -125,7 +126,7 @@
         </section>
 
         <!-- Campaign heading -->
-        <header id="campaignAbstract"></header>
+        <header id="campaignAbstract" class="markdown-body"></header>
 
         <!-- Campaign donation form -->
         <fieldset id="donateField" class="row">
@@ -392,10 +393,10 @@
 </div>
 </div>
 </div>
-</fieldset>
+        </fieldset>
 
-<!-- Campaign details. -->
-<section id="campaignDetails" class="row"></section>
+        <!-- Campaign details. -->
+        <section id="campaignDetails" class="row markdown-body"></section>
 </article>
 
 <!-- Campaign sidebar -->
