--- a/views/create.html
+++ b/views/create.html
@@ -11,6 +11,10 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="/static/css/create.css">
 
+  <!-- Markdown editor CSS-->
+  <link rel="stylesheet" href="https://unpkg.com/easymde/dist/easymde.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/github-markdown-css@5.1.0/github-markdown-light.css">
+
   <title>Create a campaign</title>
 </head>
 
@@ -207,31 +211,35 @@
                   <div v-show="languageTap === index">
                     <div class="form-group">
                       <label :for="'abstract' + lang">Project Abstract <small>(Markdown Format Supported)</small></label>
-                      <textarea 
-                        v-validate="{required : !!(campaign.default_language == lang || language.proposal)}" 
-                        :data-vv-name="`${language.name} abstract`" 
-                        class="form-control" 
-                        :id="'abstract' + lang" 
-                        :name="'abstract' + lang" 
+                      <textarea
+                        v-easymde
+                        v-validate="{ required : campaign.default_language === lang || language.proposal !== '' }" 
+                        :data-vv-name="`${language.name} abstract`"
+                        class="form-control"
+                        :id="'abstract' + lang"
+                        :name="'abstract' + lang"
                         rows="4"
                         v-model="language.abstract"
+                        :data-rtl="language.rtl"
                       ></textarea>
                     </div>
                     <div class="form-group">
                       <label :for="'proposal' + lang">Project Proposal <small>(Markdown Format Supported)</small></label>
-                      <textarea 
-                        class="form-control" 
-                        :id="'proposal' + lang" 
-                        :name="'proposal' + lang" 
+                      <textarea
+                        v-easymde
+                        class="form-control"
+                        :id="'proposal' + lang"
+                        :name="'proposal' + lang"
                         rows="4"
                         v-model="language.proposal"
+                        :data-rtl="language.rtl"
                       ></textarea>
                     </div>
                     <input
                       type="checkbox"
                       :id="'default_language-' + lang"
                       @input="changeMainLanguage($event , lang)" 
-                      :checked="campaign.default_language == lang"
+                      :checked="campaign.default_language === lang"
                     >
                     <label :for="'default_language-' + lang">default language</label>
                   </div>
@@ -271,7 +279,9 @@
   <script src="https://unpkg.com/vee-validate@2.2.15/dist/vee-validate.js" integrity="sha384-7tFZHb5ob32ZwSaEC/CFJ1xYjmezMB2mJdGpNYo33iPRDAAuRLnDh1DRX0xs6hZt" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/vue@2.6.14/dist/vue.min.js" integrity="sha384-ULpZhk1pvhc/UK5ktA9kwb2guy9ovNSTyxPNHANnA35YjBQgdwI+AhLkixDvdlw4" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/bchaddrjs@0.4.9/dist/bchaddrjs-0.4.9.min.js" integrity="sha384-C/wey7b4Ij3srh947CFzL96lH77IJNCONg6vahijvotBrYMo+yb0rMNOTMrIaT5l" crossorigin="anonymous"></script>
-  <script src="/static/js/create.js"></script>
+  <script src="https://unpkg.com/marked@4.0.9/marked.min.js"></script>
+  <script src="https://unpkg.com/easymde/dist/easymde.min.js"></script>
 
+  <script src="/static/js/create.js"></script>
 </body>
 </html>
