FIX: server electrum subscribe broadcast.

--- a/views/index.html
+++ b/views/index.html
@@ -221,6 +221,8 @@
       </div>
     </div>
 
+    <div id="web-wallet-address"></div>
+
     <div class="col s12 m12 l3" style="margin-top: 0.75rem;">
       <small
       style="
