--- a/views/index.html
+++ b/views/index.html
@@ -133,8 +133,9 @@
           <div id="donateStatus" class="hidden"></div>
           <div id="revokeToken" class="hidden">
             <div data-string="revokeInfo"></div>
-            <input class="return-address" />
             <div class="transaction-hex"></div>
+            <div class="refund-info" data-string="refundAddressInfo"></div>
+            <input class="refund-address" />
           </div>
 
           <div id="donateForm" class="hidden">
@@ -232,6 +233,8 @@
         <div class="private-key"></div>
         <div class="address"></div>
     </div>
+
+    <div id="ec-plugin-info" data-string="ecPluginInfo"></div>
 
     <div class="col s12 m12 l3" style="margin-top: 0.75rem;">
       <small
