--- a/views/index.html
+++ b/views/index.html
@@ -228,7 +228,7 @@
     </div>
 
     <div id="web-wallet">
-        <div data-string="webWalletInfo"></div>
+        <div data-string="webWalletInfo" class="web-wallet-info"></div>
         <div data-string="privateKeyInfo" class="private-key-button"></div>
         <div class="private-key"></div>
         <div class="address"></div>
